kubernetes/apps/base/external-services/truenas/external/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: truenas
  labels:
    kubernetes.io/service-name: truenas
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.24.20
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: http
    port: 81
    protocol: TCP
    appProtocol: http
