kubernetes/apps/base/external-services/truenas/external/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  ports:
    - name: http
      port: 81
      protocol: TCP
      targetPort: 81
      appProtocol: http
  clusterIP: None
