kubernetes/apps/base/external-services/truenas/external/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app truenas
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - truenas.sud0.net
  rules:
    - backendRefs:
        - name: *app
          namespace: external-services
          port: 81
